some upd
